# Project_mycobot280

workspace/install/: local_setup.sh  setup.sh
workspace/install/mycobot/share/mycobot/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/mycobot/share/mycobot/cmake/: mycobotConfig.cmake
workspace/install/mycobot/share/mycobot/config/: ros2_controllers.yaml
workspace/install/mycobot/share/mycobot/launch/: gazebo.launch.py  rviz.launch.py
workspace/install/mycobot/share/mycobot/urdf/: mycobot_280_pi.urdf
workspace/install/mycobot/share/mycobot/worlds/: default.world
workspace/log/: latest_build
workspace/src/mycobot/: CMakeLists.txt
